fase-3/gitops/.render/analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: toggle
spec:
  ports:
    - port: 8005
      protocol: TCP
      targetPort: 8005
  selector:
    app: analytics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: analytics
  name: analytics-deployment
  namespace: toggle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: analytics-configmap
            - secretRef:
                name: analytics-secret
            - secretRef:
                name: aws-session-creds
          image: 361075236043.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/analytics-image:0.0.0-lab.13-6d33632
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 20
            periodSeconds: 20
          name: analytics-container
          ports:
            - containerPort: 8005
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
          resources:
            limits:
              cpu: 40m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
