fase-3/gitops/.render/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: toggle
spec:
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 8001
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth-deployment
  namespace: toggle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: auth-configmap
            - secretRef:
                name: auth-secret
          image: 047719652987.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/auth-image:0.0.0-lab.9-d4290ed
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 20
            timeoutSeconds: 5
          name: auth-container
          ports:
            - containerPort: 8001
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 8
          resources:
            limits:
              cpu: 500m
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 5
