fase-3/gitops/.render/flag.yaml
apiVersion: v1
kind: Service
metadata:
  name: flags-service
  namespace: toggle
spec:
  ports:
    - port: 8002
      protocol: TCP
      targetPort: 8002
  selector:
    app: flags
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flags
  name: flags-deployment
  namespace: toggle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flags
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flags
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: flags-configmap
            - secretRef:
                name: flags-secret
          image: 361075236043.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/flag-image:0.0.0-lab.26-7dcde38
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
          name: flags-container
          ports:
            - containerPort: 8002
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 40m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
