fase-3/gitops/.render/targeting.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: toggle
spec:
  ports:
    - port: 8003
      protocol: TCP
      targetPort: 8003
  selector:
    app: targeting
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: targeting
  name: targeting-deployment
  namespace: toggle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: targeting
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: targeting-configmap
            - secretRef:
                name: targeting-secret
          image: 047719652987.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/targeting-image:0.0.0-lab.27-1326719
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8003
            periodSeconds: 20
            timeoutSeconds: 5
          name: targeting-container
          ports:
            - containerPort: 8003
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /health
              port: 8003
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 8
          resources:
            limits:
              cpu: 500m
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: 8003
            periodSeconds: 5
